# libam7xxx

./: .gitignore  CMakeLists.txt  ChangeLog  HACKING.asciidoc  Makefile  NEWS  README.asciidoc  TODO  am7xxx.c  am7xxx.h  picoproj.c
cmake_modules/: FindAsciidoc.cmake  FindFFmpeg.cmake  MaintenanceTools.cmake  mingw_cross_toolchain.cmake
contrib/: 50-am7xxx_mode_switch.rules  55-am7xxx.rules  99-am7xxx-autodisplay.rules  am7xxx-autodisplay.sh  am7xxx-play-window.sh
contrib/performance/: 0001-Instrument-code-with-fps-meter.patch  README
debian/: README.Debian  changelog  control  copyright  libam7xxx-dev.install  libam7xxx-doc.doc-base  libam7xxx-doc.docs  libam7xxx-doc.lintian-overrides  libam7xxx0.1.symbols  libam7xxx0.1.udev  rules  watch
debian/patches/: 0001-Revert-am7xxx-play-switch-to-avcodec_encode_video2.patch  0001-doc-add-a-man-page-for-am7xxx_mode_switch.patch  0002-Revert-am7xxx-play-switch-to-avcodec_encode_video2.patch  0002-am7xxx-add-quirks-for-Philips-Sagemcom-PicoPix-2055.patch  0003-am7xxx-libusb-undefined.patch  series
doc/: CMakeLists.txt  Doxyfile.in  DoxygenMainpage.dox
doc/man/: CMakeLists.txt  am7xxx-modeswitch.1.txt  am7xxx-play.1.txt  am7xxx_mode_switch.1.txt  picoproj.1.txt
examples/: CMakeLists.txt  am7xxx-modeswitch.c  am7xxx-play.c  am7xxx_mode_switch.c  picoproj.c
src/: CMakeLists.txt  am7xxx.c  am7xxx.h  libam7xxx.pc.in  picoproj.c  serialize.c  serialize.h
